Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/

Done for version 2.10.0 (released ??/??/??):
  Fixed
      1-subst(1+x^3+O(x^6),x,x+O(x^4)) -> SEGV [#1865]
BA    2-lfunartin was using too much stack
BA    3-fflog in char 3 or 5 was slower than intended

  Changed
      1- rewrite bnfnarrow
      2- the bid struct from idealstar has been changed, the new format is
         not compatible with pari-2.9
      3- the bnrdisclist output is now and ordinary vector (not a vector of
         vectors)

  Added
      1-[libari] ZM_isidentity
      2-[libpari] rename buchnarrow -> bnfnarrow

Changed

Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd