@@ -287,65 +287,83 @@ Mod(5*y^4 + 4*y^3 - 12*y^2 - y - 5, y^5 - 4*y^3 + 2*y + 11)
 880949016596504]~]
 [[[[[1, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0,
  1], Vecsmall([1])], [2, [2]], [matrix(0,2), matrix(0,2)], [[], [[2], Vecsma
-ll([1]), Mat(1), 1/2, [1; 0; 0; 0; 0]]], [Mat(1)]]], [[[[2, 0, 0, 0, 0; 0, 1
-, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], Vecsmall([1])], [2,
- [2]], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100,
- 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 1]), matrix(
-0,2)], [[], [[2], Vecsmall([1]), Mat(1/2), 1, [2; 0; 0; 0; 0]]], [Mat(1)]]],
- [], [[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0
-, 0, 1], Vecsmall([1])], [4, [2, 2]], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0,
- -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 
-1, 0, 0, -10, 0]], 2]), Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, 
--60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0
-]], 2])], [[[[2], [[-1, 0, 0, -1, 0]~], [2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0,
- 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0, 0, 1], [[[1, 0, 1, 0, 0]~, [1, 0, 0, 0, 0]
-, [2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0,
- 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]]]~, 1, [1, matrix(0,2)]],
- [1, 1, [[[2], [[1, 0, 0, 1, 0]~], Mat([0, 0, 0, 2, 0]), 2]]], [[0]~, Mat(1)
-]]], [[2], Vecsmall([1]), Mat(1/2), 1, [2; 0; 0; 0; 0]]], [[1; 0], [0; 1]]],
- [[[2, 0, 1, 0, 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 
-1], Vecsmall([1])], [6, [6]], [Mat([[2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20
-, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1
-, -10, 0]], 1]), Mat([[2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1,
- -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], 1]
-)], [[[[3], [[0, 1, 0, 0, 0]~], [2, 0, 1, 0, 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0
-; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], [[[2, 0, 1, 0, 1]~, [1, 0, 1, 0, 0; 0, 1, 0
-, 0, 0], [2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -
-120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], x^2 + x + 1, [1
-, x]]~, x, [3, Mat([3, 1])]]]], [[2], Vecsmall([1]), Mat(1/2), 1, [2; 0; 0; 
-0; 0]]], [Mat(-2), Mat(-3)]]]]
+ll([1]), Mat(1), 20.85619222793697806338436677312547069840936189148609965738
+5606105759553686957605190193844727221233577865144297166021560180960373224372
+600900514567409428535493879667818173119, [1; 0; 0; 0; 0]]], [Mat(1)]]], [[[[
+2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], 
+Vecsmall([1])], [2, [2]], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -1
+0, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10
+, 0]], 1]), matrix(0,2)], [[], [[2], Vecsmall([1]), Mat(1/2), 21.35619222793
+6978063384366773125470698409361891486099657385606105759553686957605190193844
+7272212335778651442971660215601809603732243726009005145674094285354938796678
+18173119, [2; 0; 0; 0; 0]]], [Mat(1)]]], [], [[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 
+0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0, 0, 1], Vecsmall([1])], [4, [2, 2]]
+, [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -
+20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 2]), Mat([[2, [0,
+ 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -1
+0, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 2])], [[[[2], [[-1, 0, 0, -1, 0]
+~], [2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0, 0,
+ 1], [[[1, 0, 1, 0, 0]~, [1, 0, 0, 0, 0], [2, [0, 0, 1, -1, 0]~, 3, 1, [0, -
+80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1,
+ 0, 0, -10, 0]]]~, 1, [1, matrix(0,2)]], [1, 1, [[[2], [[1, 0, 0, 1, 0]~], M
+at([0, 0, 0, 2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2), 
+41.3685785647047324094174611697873353894250150980660669920521139224917673562
+5184799713869907731988064596167496452456126722898867019089805044829022202206
+2722979243788174152853, [2; 0; 0; 0; 0]]], [[1; 0], [0; 1]]], [[[2, 0, 1, 0,
+ 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], Vecsmall([1
+])], [6, [6]], [Mat([[2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1, 
+-100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], 1])
+, Mat([[2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -12
+0; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], 1])], [[[[3], [[0
+, 1, 0, 0, 0]~], [2, 0, 1, 0, 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0
+; 0, 0, 0, 0, 1], [[[2, 0, 1, 0, 1]~, [1, 0, 1, 0, 0; 0, 1, 0, 0, 0], [2, [1
+, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, 
+-20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], x^2 + x + 1, [1, x]]~, x, [3, 
+Mat([3, 1])]]]], [[2], Vecsmall([1]), Mat(1/2), 21.9561427071251651311029092
+6933766799346482735879652024183639344092770055508085947230952445471265103162
+5326118460230780651553398961281194682253626505116814177943190107524899, [2; 
+0; 0; 0; 0]]], [Mat(-2), Mat(-3)]]]]
 [[[[[[1, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0
-, 1], Vecsmall([1])], [2, [2], [[0, 0, 0, 0, 0]~]], [matrix(0,2), matrix(0,2
-)], [[], [[2], Vecsmall([1]), Mat(1), 1/2, [1; 0; 0; 0; 0]]], [Mat(1)]], [Ma
-t([1, 1, 1])]]], [[[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 
-1, 0; 0, 0, 0, 0, 1], Vecsmall([1])], [2, [2], [[-1, 0, 0, 0, 0]~]], [Mat([[
-2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0,
- 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 1]), matrix(0,2)], [[], [[
-2], Vecsmall([1]), Mat(1/2), 1, [2; 0; 0; 0; 0]]], [Mat(1)]], [[], Mat([1, 1
-, 1])]]], [], [[[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 
-0; 0, 0, 0, 0, 1], Vecsmall([1])], [4, [2, 2], [[41, 0, 0, -1, 0]~, [-1, 0, 
-0, 0, 0]~]], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0,
- -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 2]), M
-at([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 
-0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 2])], [[[[2], [[-1, 0
-, 0, -1, 0]~], [2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 
-0, 0, 0, 0, 1], [[[1, 0, 1, 0, 0]~, [1, 0, 0, 0, 0], [2, [0, 0, 1, -1, 0]~, 
-3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -
-2, 0, 2; 1, 0, 0, -10, 0]]]~, 1, [1, matrix(0,2)]], [1, 1, [[[2], [[1, 0, 0,
- 1, 0]~], Mat([0, 0, 0, 2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]),
- Mat(1/2), 1, [2; 0; 0; 0; 0]]], [[1; 0], [0; 1]]], [Mat([0, 0, 0]), Mat([1,
- 1, 1])]], [[[[2, 0, 1, 0, 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0
-, 0, 0, 0, 1], Vecsmall([1])], [6, [6], [[0, 1, 0, 0, 0]~]], [Mat([[2, [1, 2
-, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20
-, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 0]], 1]), Mat([[2, [1, 2, 1, 0, 0]~, 1
-, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 
-0, 0, 0; 1, 1, -1, -10, 0]], 1])], [[[[3], [[0, 1, 0, 0, 0]~], [2, 0, 1, 0, 
-0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], [[[2, 0, 1, 
-0, 1]~, [1, 0, 1, 0, 0; 0, 1, 0, 0, 0], [2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80,
- -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1
-, -1, -10, 0]], x^2 + x + 1, [1, x]]~, x, [3, Mat([3, 1])]]]], [[2], Vecsmal
-l([1]), Mat(1/2), 1, [2; 0; 0; 0; 0]]], [Mat(-2), Mat(-3)]], [Mat([0, 2, 0])
-, Mat([1, 1, 1])]]]]
+, 1], Vecsmall([1])], [2, [2], [[-21, 0, 0, 0, 0]~]], [matrix(0,2), matrix(0
+,2)], [[], [[2], Vecsmall([1]), Mat(1), 20.856192227936978063384366773125470
+6984093618914860996573856061057595536869576051901938447272212335778651442971
+66021560180960373224372600900514567409428535493879667818173119, [1; 0; 0; 0;
+ 0]]], [Mat(1)]], [Mat([1, 1, 1])]]], [[[[[2, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 
+0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], Vecsmall([1])], [2, [2], [[-21, 0
+, 0, 0, 0]~]], [Mat([[2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 
+0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 1]),
+ matrix(0,2)], [[], [[2], Vecsmall([1]), Mat(1/2), 21.3561922279369780633843
+6677312547069840936189148609965738560610575955368695760519019384472722123357
+7865144297166021560180960373224372600900514567409428535493879667818173119, [
+2; 0; 0; 0; 0]]], [Mat(1)]], [[], Mat([1, 1, 1])]]], [], [[[[[2, 0, 0, 0, 0;
+ 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0, 0, 1], Vecsmall([1])]
+, [4, [2, 2], [[81, 0, 0, -1, 0]~, [-41, 0, 0, 0, 0]~]], [Mat([[2, [0, 0, 1,
+ -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -10
+0; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]], 2]), Mat([[2, [0, 0, 1, -1, 0]~, 3, 1,
+ [0, -80, 60, -10, -60; 0, 0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0,
+ 2; 1, 0, 0, -10, 0]], 2])], [[[[2], [[-1, 0, 0, -1, 0]~], [2, 0, 0, 0, 0; 0
+, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 2, 0; 0, 0, 0, 0, 1], [[[1, 0, 1, 0, 0
+]~, [1, 0, 0, 0, 0], [2, [0, 0, 1, -1, 0]~, 3, 1, [0, -80, 60, -10, -60; 0, 
+0, -100, 0, -20; 0, 0, 0, -10, -100; 0, 2, -2, 0, 2; 1, 0, 0, -10, 0]]]~, 1,
+ [1, matrix(0,2)]], [1, 1, [[[2], [[1, 0, 0, 1, 0]~], Mat([0, 0, 0, 2, 0]), 
+2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2), 41.368578564704732409
+4174611697873353894250150980660669920521139224917673562518479971386990773198
+8064596167496452456126722898867019089805044829022202206272297924378817415285
+3, [2; 0; 0; 0; 0]]], [[1; 0], [0; 1]]], [Mat([0, 0, 0]), Mat([1, 1, 1])]], 
+[[[[2, 0, 1, 0, 0; 0, 2, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 
+1], Vecsmall([1])], [6, [6], [[0, 1, 0, 0, 0]~]], [Mat([[2, [1, 2, 1, 0, 0]~
+, 1, 2, [0, -80, -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 
+2, 0, 0, 0; 1, 1, -1, -10, 0]], 1]), Mat([[2, [1, 2, 1, 0, 0]~, 1, 2, [0, -8
+0, -20, 0, 0; 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1,
+ 1, -1, -10, 0]], 1])], [[[[3], [[0, 1, 0, 0, 0]~], [2, 0, 1, 0, 0; 0, 2, 0,
+ 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1], [[[2, 0, 1, 0, 1]~, [1,
+ 0, 1, 0, 0; 0, 1, 0, 0, 0], [2, [1, 2, 1, 0, 0]~, 1, 2, [0, -80, -20, 0, 0;
+ 0, -1, -100, -10, -120; 1, 0, -1, -20, -100; 0, 2, 0, 0, 0; 1, 1, -1, -10, 
+0]], x^2 + x + 1, [1, x]]~, x, [3, Mat([3, 1])]]]], [[2], Vecsmall([1]), Mat
+(1/2), 21.956142707125165131102909269337667993464827358796520241836393440927
+7005550808594723095244547126510316253261184602307806515533989612811946822536
+26505116814177943190107524899, [2; 0; 0; 0; 0]]], [Mat(-2), Mat(-3)]], [Mat(
+[0, 2, 0]), Mat([1, 1, 1])]]]]
 [[[5, 1, [2, 2; 5, 2; 39821, 1; 161141, 1]]], [[]], [], [[10, 2, [2, 6; 5, 4
 ; 39821, 2; 161141, 2]], []]]
 [[[0, 0, 0]], [[]], [], [[0, 0, 0], []]]
@@ -476,4 +494,4 @@ d(-62626/622201*y - 860751/622201, y^2 - 5), x^10 + 5*x^9 + 15*x^8 + 30*x^7
   ***   at top-level: nfisisom(x,x^0)
   ***                 ^---------------
   *** nfisisom: not an irreducible polynomial in nfisincl: 1.
-Total time spent: 2049
+Total time spent: 2340
