@@ -1,4 +1,4 @@
-HEAP=[169, if(precision(1.)==38,104179,116142)];
+HEAP=[169, if(precision(1.)==38,104175,116142)];
 default(realprecision,154); Pi; default(realprecision,38);
 dobnf(T,flag=0,tech=[])= setrand(1); my(K = bnfinit(T,flag,tech)); [K.cyc,K.fu];
 \e
